Change remove gap to ToggleSwitch and fix rest hover color

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -323,7 +323,7 @@ body .toolbar-item__popover {
 	margin-left: 8px;
 
 	&:hover {
-		background: #f6f6f6;
+		background: #f1f1f1;
 	}
 	svg {
 		width: 14px;
